--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
+C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\DigitalKonstrukt*
+C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\Large Terrain Generator*
+C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\Materials*
+C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\Sounds*
+C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\texture*
 
 # Visual Studio cache directory
 .vs/
@@ -23,6 +28,7 @@ ExportedObj/
 *.svd
 *.pdb
 *.opendb
+*.fbx
 
 # Unity3D generated meta files
 *.pidb.meta
