--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
-C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\DigitalKonstrukt*
-C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\Large Terrain Generator*
-C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\Materials*
-C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\Sounds*
-C:\Users\roxer\OneDrive\Documents\GitHub\Mars-Rover-Sim\Racing game - Copy\Assets\texture*
+Copy\Assets\DigitalKonstrukt*
+Copy\Assets\Large Terrain Generator*
+Copy\Assets\Materials*
+Copy\Assets\Sounds*
+Copy\Assets\texture*
 
 # Visual Studio cache directory
 .vs/
