--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
+[Ll]ibrary
+[Tt]emp
+[Oo]bj
+[Bb]uild
+[Bb]uilds
 Assets/AssetStoreTools*
 Copy\Assets\DigitalKonstrukt*
 Copy\Assets\Large Terrain Generator*
